--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   },
   "devDependencies": {
     "@types/react-copy-to-clipboard": "^5.0.7"
+  },
+  "scripts": {
+    "preinstall": "node preinstall.js"
   }
 }
